--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <title>ExoPet</title>
-<meta charset="utf-8">
-<meta lang="en">
-<meta name="description" content="width=device-width, initial-scale=1">
-<meta name="author" content="Xander Bielby">
-<meta name="description" content="A game about lovable little jelly creatures.">
-<link rel="stylesheet" href="style.css">
+<meta charset=utf-8>
+<meta lang=en>
+<meta name=description content="width=device-width, initial-scale=1">
+<meta name=author content="Xander Bielby">
+<meta name=description content="A game about lovable little jelly creatures.">
+<link rel=stylesheet href="style.css">
 <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
 
 <header>
