--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <title>ExoPet</title>
 <link rel="icon" href="img/icon.svg">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-<script defer="js/inventory/inventory.js"></script>
+<script defer src="js/inventory.mjs" type="module"></script>
+<script defer src="js/pet/view.mjs" type="module"></script>
 <script>
     window.addEventListener('load', async () => {
-        // As I'm testing this I've had #902 installs of this thing,
-        // probably not optimal.
         if (!navigator?.serviceWorker?.controller)
             await navigator.serviceWorker.register('/worker.mjs', {'scope': '/'});
     });
@@ -18,12 +17,16 @@
     <input type="checkbox" id="collapse">
     <label for="collapse">&#9776;</label>
     <ul id="menu">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
     </ul>
 </header>
 
 <!-- pet -->
-<main id="pet">
-    <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+<main>
+    <svg id="pet" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
         <defs>
             <path id="leg" class="primary-tone" d="M0,0 c-1,3 2,3 1,0 z M1.5,0 c-1,3 2,3 1,0 z M3,0 c-1,3 2,3 1,0 z" />
             <path id="ear" class="secondary-tone" d="M0,0 a 0.75 0.75 1 1 1 0.5,-0.5 z" />
@@ -80,10 +83,10 @@
     
         <path id="body" class="primary-tone" d="M5,15 C -5,-3 25,-3 15,15 z" />
     
-        <!-- <use href="#happy-face" /> -->
-        <!-- <use href="#sad-face" /> -->
-        <!-- <use href="#dead-face" /> -->
-        <use href="#joyful-face" />
+        <use id="happy" class="hidden" href="#happy-face" />
+        <use id="sad" class="hidden" href="#sad-face" />
+        <use id="dead" href="#dead-face" />
+        <use id="joyful" class="hidden" href="#joyful-face" />
     </svg>
 </main>
 
