--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
+
 <title>The Pond</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
 <link rel="icon" href="/img/frog-sit.svg">
+<link rel="stylesheet" href="/css/style.css">
+<script defer type="module" src="/js/game.mjs"></script>
 
-<script>
-    window.addEventListener("load", () => window.navigator?.serviceWorker.register("/worker.mjs"));
-</script>
-<script defer src="/js/game.mjs"></script>
+<canvas width="500" height="500"></canvas>
