--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 
 <title>The Pond</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
-<link rel="icon" href="/img/frog-sit.svg">
-<link rel="stylesheet" href="/css/style.css">
-<script defer type="module" src="/js/game.mjs"></script>
+<meta charset=UTF-8>
+<meta name=viewport content="width=device-width, initial-scale=1.0">
+<link rel=manifest href=/manifest.json crossorigin=use-credentials>
+<link rel=icon href=/img/frog-sit.svg>
+<link rel=stylesheet href=/css/style.css>
+<script defer type=module src=/js/game.mjs></script>
 
-<canvas width="500" height="500"></canvas>
+<canvas width=500 height=500></canvas>
+
+<section>
+    <figure>
+        <span>Happiness</span>
+        <meter max=100 id=happy></meter>
+    <figure>
+        <span>Saturation</span>
+        <meter max=100 id=food></meter>
+    </figure>
+    <figure>
+        <span>Tiredness</span>
+        <meter max=100 id=sleep></meter>
+    </figure>
+    <figure>
+        <span>Cleanliness</span>
+        <meter max=100 id=clean></meter>
+    </figure>
+</section>
