fixed missing closing figure tag

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <figure>
         <span>Happiness</span>
         <meter max=100 id=happy></meter>
+    </figure>
     <figure>
         <span>Saturation</span>
         <meter max=100 id=food></meter>
