added food and sleep saving

--- a/www/index.html
+++ b/www/index.html
@@ -28,3 +28,12 @@
         <meter max=100 id=clean></meter>
     </figure>
 </section>
+<dialog id="new-pet">
+
+</dialog>
+<dialog id="dead-pet">
+
+</dialog>
+<dialog id="exhausted">
+
+</dialog>
