--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link rel=manifest href=manifest.json crossorigin=use-credentials>
 <link rel=icon href=img/frog-sit.svg>
-<link rel=stylesheet href=css/style.css>
+<link rel=stylesheet href=style.css>
 <script defer type=module src=js/index.mjs></script>
 
 <canvas width=500 height=500></canvas>
