refactor: removed stats mechanic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <canvas width=500 height=500></canvas>
 
-<section>
+<!-- <section>
     <figure>
         <span>Happiness</span>
         <meter max=100 id=happy></meter>
@@ -27,7 +27,7 @@
         <span>Cleanliness</span>
         <meter max=100 id=clean></meter>
     </figure>
-</section>
+</section> -->
 <dialog id="new-pet">
     <h2>New Pet</h2>
     <form method="dialog">
