--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel=stylesheet href=style.css>
 <script defer type=module src=js/index.mjs></script>
 
-<canvas width=500 height=500></canvas>
+<canvas></canvas>
 
 <!-- <section>
     <figure>
