refactor: close #3; close #16; close #17

--- a/index.html
+++ b/index.html
@@ -8,4 +8,16 @@
 <link rel=stylesheet href=style.css>
 <script defer type=module src=js/index.mjs></script>
 
+<!-- Game canvas -->
 <canvas></canvas>
+
+<!-- Images to avoid making requests for each new render -->
+<img id="brush" src="img/brush.svg">
+<img id="cookie" src="img/cookie.svg">
+<!-- <img id="empty" href="img/empty.svg"> -->
+<img id="fly" src="img/fly.svg">
+<img id="frog-jump" src="img/frog-jump.svg">
+<img id="frog-sit" src="img/frog-sit.svg">
+<img id="lily" src="img/lily.svg">
+<!-- <img id="marshmallow" href="img/marshmallow.svg"> -->
+<img id="pill" src="img/pill.svg">
