feat: poisson disc sampling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel=manifest href=manifest.json crossorigin=use-credentials>
 <link rel=icon href=img/frog-sit.svg>
 <link rel=stylesheet href=style.css>
+<script defer src="https://cdn.jsdelivr.net/gh/kchapelier/fast-2d-poisson-disk-sampling@1.0.3/build/fast-poisson-disk-sampling.min.js"></script>
 <script defer type=module src=js/index.mjs></script>
 
 <!-- Game canvas -->
